--- a/sass/components/_food-cost-calculator.scss
+++ b/sass/components/_food-cost-calculator.scss
@@ -38,8 +38,12 @@
 
     @include respond(phone) {
         font-size: 1.5rem;
-    width: 100px; 
+    width: 100px;
 }
+  }
+
+  &__submit {
+      
   }
 }
 
