--- a/sass/components/_food-cost-calculator.scss
+++ b/sass/components/_food-cost-calculator.scss
@@ -4,20 +4,21 @@
 
   &__calculator {
       color: $text-color-main;
-    position: relative;
-    // display: flexbox;
+    // position: absolute;
+    // display: inline-block;
     @include glassFadeDark;
     margin-bottom:  2rem;
     padding: 2rem;
   }
 
   &__input {
+    //   position: absolute;
     font-size: 1.5rem;
     text-align: center;
     padding: 1rem;
     width: 15rem;
     border: none;
-    display: block;
+    // display: inline-block;
     border-radius: 5px;
     @include glassFade;
     margin: 2rem;
@@ -31,8 +32,8 @@
 
   &__inputLabel {
       display: inline-block;
-      width: 200px;
-    position: absolute;
+      width: 400px;
+    // position: absolute;
     text-transform: uppercase;
     font-size: 1.5rem;
     text-align: left;
@@ -50,7 +51,7 @@
   }
 }
 
-.foodCostInputs {
-    display: inline-block;
-    width: 100%;
-}
+// .foodCostInputs {
+//     display: inline-block;
+//     width: 100%;
+// }
