--- a/sass/layout/_dailypreplist.scss
+++ b/sass/layout/_dailypreplist.scss
@@ -18,10 +18,10 @@
     text-align: center;
     cursor: pointer;
 
-     @include respond(tab-port) {
-        top: 2rem;
-        right: 6rem;
-      }
+    @include respond(tab-port) {
+      top: 2rem;
+      right: 6rem;
+    }
   }
   &__button--label {
     position: fixed;
@@ -68,9 +68,9 @@
     transition: transform 0.5s;
 
     @include respond(tab-port) {
-        top: 2rem;
-        right: 6rem;
-      }
+      top: 2rem;
+      right: 6rem;
+    }
   }
 
   &__nav {
@@ -91,7 +91,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     list-style: none;
-    width: 30%;
+    width: 50%;
+    padding: 1rem;
   }
 
   &__item {
@@ -101,10 +102,9 @@
     &:link,
     &:visited {
       text-shadow: $text-shadow-dark;
-      display: inline-block;
       font-size: 4rem;
       font-weight: 300;
-      padding: 1rem;
+      padding: 2rem;
       color: $color-white;
       text-decoration: none;
       text-transform: uppercase;
@@ -118,13 +118,21 @@
       background-size: 250%;
       transition: all 0.4s;
 
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
       @include respond(phone) {
         // right: 6rem;
         font-size: 2rem;
-        line-height: 2rem;
+        line-height: 5rem;
         width: 30rem;
         max-width: 100%;
-        letter-spacing: .3rem;
+        letter-spacing: 0.1rem;
+        padding: 1rem;
+        margin: 10px;
+        border-bottom: 1px solid;
       }
     }
 
