--- a/sass/layout/_section-start.scss
+++ b/sass/layout/_section-start.scss
@@ -6,6 +6,13 @@
     width: 100%;
     top: 2rem;
     text-align: center;
+   
+
+    display: flex;
+    flex-direction: column;
+     align-items: center;
+    justify-content: center;
+
   }
 
   // &__list {
