--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -23,6 +23,8 @@
   &.active {
     transform: translate(-50%, -50%) scale(1);
     z-index: 4500;
+    backface-visibility: hidden;
+
   }
 
   &__header {
