--- a/sass/layout/_dailypreplist.scss
+++ b/sass/layout/_dailypreplist.scss
@@ -101,6 +101,7 @@
   &__link {
     &:link,
     &:visited {
+      z-index: 1000;
       text-shadow: $text-shadow-dark;
       font-size: 4rem;
       font-weight: 300;
