--- a/sass/components/_button-regular.scss
+++ b/sass/components/_button-regular.scss
@@ -105,6 +105,10 @@
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
   }
+
+  &--show-modal {
+
+  }
 }
 
 .btn-text {
