--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,7 +24,6 @@
     transform: translate(-50%, -50%) scale(1);
     z-index: 4500;
     backface-visibility: hidden;
-
   }
 
   &__header {
@@ -64,4 +63,11 @@
       padding: 0%;
     }
   }
+
+  &.hidden {
+  visibility: hidden;
+  opacity: 0;
 }
+
+}
+
