--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,7 +7,7 @@
   @include greenGlassFade;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(1);
   transition: 200ms ease-in-out;
   position: fixed;
   border-bottom: 3px solid white;
@@ -20,11 +20,11 @@
 
   box-shadow: $box-shadow-dark;
 
-  &.active {
-    transform: translate(-50%, -50%) scale(1);
-    z-index: 4500;
-    backface-visibility: hidden;
-  }
+  // &.active {
+  //   transform: translate(-50%, -50%) scale(1);
+  //   z-index: 4500;
+  //   backface-visibility: hidden;
+  // }
 
   &__header {
     // text-align: center;
@@ -64,10 +64,12 @@
     }
   }
 
-  &.hidden {
-  visibility: hidden;
-  opacity: 0;
+ 
+
 }
 
+ .hidden {
+
+  display: none;
 }
 
