--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -8,6 +8,7 @@
   transition: 200ms ease-in-out;
 
   backdrop-filter: blur(15px);
+  @include glassFadeDark;
 
   z-index: 1500;
   // pointer-events: none;
