--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,5 +21,7 @@
 @import "components/overlay";
 @import "components/button-regular";
 @import "components/food-cost-calculator";
+@import "components/tab_element";
+
 
 
