--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,4 +5,14 @@
   border-radius: 0.5rem;
   padding: 5rem;
   // margin-bottom: 3rem ;
+
+  &__title {
+    text-align: center;
+    align-items: center;
+    padding: 5rem;
+  }
+
+  &__description {
+    align-items: center;
+  }
 }
