--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,6 +5,7 @@
   border-radius: 0.5rem;
   padding: 5rem;
   // margin-bottom: 3rem ;
+  // color: $color-gray-light;
 
   &__title {
     text-align: center;
