--- a/sass/components/_button-regular.scss
+++ b/sass/components/_button-regular.scss
@@ -20,6 +20,7 @@
     @include respond(phone) {
       width: fit-content;
       margin: none;
+      font-size: 1rem;
 
 
 
@@ -109,6 +110,10 @@
   }
 
   &--show-modal {
+
+  }
+
+  &__tag {
 
   }
 }
