--- a/sass/components/_tab_element.scss
+++ b/sass/components/_tab_element.scss
@@ -4,10 +4,15 @@
 
   background-color: #fff;
   box-shadow: $box-shadow-dark;
+    border-radius: 3rem;
+
 
   &__tab-container {
     display: flex;
     justify-content: center;
+
+    
+
   }
 
   &__tab {
@@ -15,7 +20,7 @@
     transform: translateY(-50%);
 
     @include respond(phone) {
-        margin: 0;
+      margin: 0;
     }
   }
 
@@ -30,20 +35,36 @@
   }
 
   &__tab--1:hover {
-    background-color: $text-color-main;
+    background-color: $transparent-green-glass;
+  }
+
+  &__tab--2 {
+    background-color: $color-background-main;
+  }
+
+  &__tab--2:hover {
+    background-color: $transparent-green-glass;
   }
 
   &__tab--3 {
-    background-color: var(--color-tertiary);
-    margin: 0;
+    background-color: $color-background-main;
   }
 
   &__tab--3:hover {
-    background-color: var(--color-tertiary-darker);
+    background-color:$transparent-green-glass;
+  }
+
+  &__tab--4 {
+    background-color: $color-background-main;
+  }
+
+  &__tab--4:hover {
+    background-color:$transparent-green-glass;
   }
 
   &__tab--active {
     transform: translateY(-66%);
+    background-color: $transparent-gold-glass;
   }
 
   &__content {
@@ -59,12 +80,17 @@
     grid-template-columns: 7rem 1fr;
     column-gap: 3rem;
     row-gap: 0.5rem;
+    background-color:$transparent-gold-glass;
+
+    border-radius: 3rem;
+
   }
 
   &__header {
     font-size: 2.25rem;
     font-weight: 500;
     align-self: center;
+
   }
 
   &__icon {
@@ -85,10 +111,10 @@
   }
 
   &__icon--1 {
-    background-color: var(--color-secondary-opacity);
+    
   }
   &__icon--2 {
-    background-color: var(--color-primary-opacity);
+
   }
   &__icon--3 {
     background-color: var(--color-tertiary-opacity);
@@ -104,7 +130,6 @@
   }
 
   @include respond(phone) {
-    
     max-width: fit-content;
   }
 }
