--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -8,12 +8,20 @@
   }
   50% {
     left: 0;
-
   }
   75% {
     left: 0;
   }
   100% {
     left: 0;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
