--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,3 +22,4 @@
 @import "components/button-regular";
 @import "components/food-cost-calculator";
 @import "components/tab_element";
+@import "components/recipe";
